--- a/samples/media-connector-invoke-test/resources/asset-public-http-anonymous-1-hls-to-fs-autostart.yaml
+++ b/samples/media-connector-invoke-test/resources/asset-public-http-anonymous-1-hls-to-fs-autostart.yaml
@@ -1,19 +1,18 @@
 apiVersion: deviceregistry.microsoft.com/v1
 kind: Asset
 metadata:
-  name: asset-public-https-anonymous-1-clip-to-fs-autostart
+  name: asset-public-http-anonymous-1-hls-to-fs-autostart
 spec:
-  assetEndpointProfileRef: aep-public-https-anonymous-1
+  assetEndpointProfileRef: aep-public-http-anonymous-1
   enabled: true
   datasets:
     - name: dataset1
       dataPoints:
-        - name: clip-to-fs
-          dataSource: clip-to-fs
+        - name: hls-to-fs
+          dataSource: hls-to-fs
           dataPointConfiguration: |-
             {
-              "taskType": "clip-to-fs",
-              "format": "avi",
+              "taskType": "hls-to-fs",
               "autostart": true,
               "realtime": true,
               "loop": true,
