Minor updates adding gitignore, devcontainer, formatting etc.
Signed-off-by: Suneet Nangia <suneetnangia@gmail.com>

--- a/samples/auth-server-user-pass-mqtt/Makefile
+++ b/samples/auth-server-user-pass-mqtt/Makefile
@@ -11,7 +11,7 @@ run:
 .PHONY: build
 build:
 	# TODO: Remove personalisations
-	IMAGE_TAG=suneetnangia/auth-server-user-pass-mqtt:v0.1 ./deploy/build_image.sh
+	IMAGE_TAG=<registry>/auth-server-user-pass-mqtt:v0.1 ./deploy/build_image.sh
 
 .PHONY: clean
 clean:
