Added authentication code and corresponding unit tests.
Signed-off-by: Suneet Nangia <suneetnangia@gmail.com>

--- a/samples/auth-server-user-pass-mqtt/Dockerfile
+++ b/samples/auth-server-user-pass-mqtt/Dockerfile
@@ -5,9 +5,9 @@ RUN apk upgrade --no-cache && \
 
 COPY auth-server-user-pass-mqtt /bin/auth-server-user-pass-mqtt
 
-ENTRYPOINT if [ -z "$SERVER_CERT_CHAIN" ]; then echo "SERVER_CERT_CHAIN must be set"; exit 1; fi; \
+# TODO: env var validation should return all missing vars in one go
+ENTRYPOINT \
+    if [ -z "$SERVER_CERT_CHAIN" ]; then echo "SERVER_CERT_CHAIN must be set"; exit 1; fi; \
     if [ -z "$SERVER_CERT_KEY" ]; then echo "SERVER_CERT_KEY must be set"; exit 1; fi; \
-    if [ -z "$CLIENT_CERT_ISSUER" ]; \
-    then /bin/auth-server-user-pass-mqtt -p 443 -c "$SERVER_CERT_CHAIN" -k "$SERVER_CERT_KEY"; \
-    else /bin/auth-server-user-pass-mqtt -p 443 -c "$SERVER_CERT_CHAIN" -k "$SERVER_CERT_KEY" -i "$CLIENT_CERT_ISSUER"; \
-    fi
+    if [ -z "$STORED_CREDENTIALS_FILE" ]; then echo "STORED_CREDENTIALS_FILE must be set"; exit 1; fi;\
+    /bin/auth-server-user-pass-mqtt -p 443 -c "$SERVER_CERT_CHAIN" -k "$SERVER_CERT_KEY" -s "$STORED_CREDENTIALS_FILE";
