--- a/samples/auth-server-user-pass-mqtt/Cargo.toml
+++ b/samples/auth-server-user-pass-mqtt/Cargo.toml
@@ -23,3 +23,5 @@ toml = "0.7"
 
 [dev-dependencies]
 mockall = "0.9"
+tempfile = "3.15"
+tokio = { version = "1.28", features = ["rt", "macros", "time", "test-util"] }
