Added support for client cert auth between MQTT broker and Auth module.
Signed-off-by: Suneet Nangia <suneetnangia@gmail.com>

--- a/samples/auth-server-user-pass-mqtt/deploy/custom-user-pass-auth-server.yaml
+++ b/samples/auth-server-user-pass-mqtt/deploy/custom-user-pass-auth-server.yaml
@@ -60,6 +60,8 @@ spec:
           value: /tls/tls.crt
         - name: SERVER_CERT_KEY
           value: /tls/tls.key
+        - name: CLIENT_CERT_ISSUER
+          value: /tls/ca.crt
         - name: STORED_CREDENTIALS_FILE
           value: /auth/passwords.toml
         - name: RUST_LOG
