--- a/samples/auth-server-user-pass-mqtt/Dockerfile
+++ b/samples/auth-server-user-pass-mqtt/Dockerfile
@@ -9,6 +9,8 @@ ENTRYPOINT \
     MISSING_VARS=""; \
     if [ -z "$SERVER_CERT_CHAIN" ]; then MISSING_VARS="$MISSING_VARS SERVER_CERT_CHAIN"; fi; \
     if [ -z "$SERVER_CERT_KEY" ]; then MISSING_VARS="$MISSING_VARS SERVER_CERT_KEY"; fi; \
+    if [ -z "$CLIENT_CERT_ISSUER" ]; then MISSING_VARS="$MISSING_VARS CLIENT_CERT_ISSUER"; fi; \
     if [ -z "$STORED_CREDENTIALS_FILE" ]; then MISSING_VARS="$MISSING_VARS STORED_CREDENTIALS_FILE"; fi; \
     if [ -n "$MISSING_VARS" ]; then echo "Missing environment variables:$MISSING_VARS"; exit 1; fi; \
-    /bin/auth-server-user-pass-mqtt -p 443 -c "$SERVER_CERT_CHAIN" -k "$SERVER_CERT_KEY" -s "$STORED_CREDENTIALS_FILE";
+    /bin/auth-server-user-pass-mqtt -p 443 -c "$SERVER_CERT_CHAIN" -i "$CLIENT_CERT_ISSUER" -k "$SERVER_CERT_KEY" -s "$STORED_CREDENTIALS_FILE";
+    
