--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
   },
   "features": {
     "ghcr.io/devcontainers/features/azure-cli:1": {
-      "extensions": "connectedk8s,k8s-extension,azure-iot-ops"
+      "installBicep": true,
+      "version": "latest"
     },
     "ghcr.io/rio/features/k3d:1": {},
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
@@ -40,5 +41,5 @@
   // Configure tool-specific properties.
   // "customizations": {},
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-  "remoteUser": "root"
+  // "remoteUser": "root"
 }
