--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
       "description": "Your Azure resource group"
     },
     "LOCATION": {
-      "description": "Region to use, must be one of eastus, eastus2, westus, westus2, westus3, westeurope, or northeurope.",
+      "description": "Region to use, must be one of eastus, eastus2, westus, westus2, westus3, westeurope, northeurope, or germanywestcentral.",
       "documentationUrl": "https://learn.microsoft.com/azure/iot-operations/deploy-iot-ops/howto-prepare-cluster"
     }
   },
