Fix GitHub Actions to publish both builders with 'latest' tag
- Remove 'is_default_branch' restriction from Python builder
- Make repository references consistent between workflows
- Add workflow_dispatch trigger to Python workflow
- Update README to use default 'latest' tag instead of 'wasm' tag

This ensures both rust-wasm-builder and python-wasm-builder get the
'latest' tag when building from main or wasm branches.

--- a/.github/workflows/wasm-python-build.yml
+++ b/.github/workflows/wasm-python-build.yml
@@ -1,6 +1,7 @@
 name: Build and Publish WASM Python Builder Image
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main, wasm ]
     paths:
@@ -43,7 +44,7 @@ jobs:
         tags: |
           type=ref,event=branch
           type=ref,event=pr
-          type=raw,value=latest,enable={{is_default_branch}}
+          type=raw,value=latest
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
