--- a/samples/process-control/process-control-demo/src/write.dataset.client/appsettings.json
+++ b/samples/process-control/process-control-demo/src/write.dataset.client/appsettings.json
@@ -14,6 +14,6 @@
     "AioSettings": {
       "Namespace": "azure-iot-operations",
       "AssetName": "boiler",
-      "DatasetName": "default"
+      "DatasetName": "boiler-simple-write"
     }
   }
