--- a/samples/wasm/rust/examples/otel-enrich/.cargo/config.toml
+++ b/samples/wasm/rust/examples/otel-enrich/.cargo/config.toml
@@ -1,2 +1,5 @@
 [registries]
-aio-tk = { index = "sparse+https://pkgs.dev.azure.com/azure-iot-sdks/iot-operations/_packaging/Tinykube/Cargo/index/" }
+aio-sdks = { index = "sparse+https://pkgs.dev.azure.com/azure-iot-sdks/iot-operations/_packaging/preview/Cargo/index/" }
+
+[build]
+target = "wasm32-wasip2"
