--- a/samples/wasm/rust/Makefile
+++ b/samples/wasm/rust/Makefile
@@ -19,4 +19,4 @@ $(1P_MODULES):
 	cd $(REPOSITORY_ROOT)/samples/wasm/rust/examples/$@ && \
 	cargo build --target wasm32-wasip2 -p $@ $(if $(DEBUG),, --release) $(CARGO_FLAGS)
 	$(eval file_naming := $(subst -,_,$@))
-	cp --archive $(REPOSITORY_ROOT)/samples/wasm/rust/examples/$@/target/wasm32-wasip2/$(MODE)/$(file_naming).wasm ./graphs/wasm-modules/processor-$@-$(VERSION).wasm
+	cp --archive $(REPOSITORY_ROOT)/samples/wasm/rust/examples/$@/target/wasm32-wasip2/$(MODE)/$(file_naming).wasm ./graphs/wasm-modules/$@-$(VERSION).wasm
