--- a/.github/workflows/module_ghcr.yml
+++ b/.github/workflows/module_ghcr.yml
@@ -2,6 +2,16 @@ name: module_ghcr
 
 on:
   workflow_dispatch:
+    inputs:
+      module-name:
+        required: false
+        type: string
+        description: "Name of the module to build and push. If not provided, all modules will be processed."
+      graph-tag:
+        required: false
+        type: string
+        default: "1.0.0"
+        description: "Tag to use for the graph modules."
   workflow_call:
     inputs:
       module-name:
@@ -11,12 +21,6 @@ on:
         required: false
         type: string
         default: "1.0.0"
-      context:
-        required: true
-        type: string
-      name:
-        required: true
-        type: string
 
 jobs:
   push-store-image:
@@ -34,12 +38,29 @@ jobs:
           registry: ghcr.io
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
+      
+      - name: "Install Cargo"
+        run: |
+          # Install cargo
+          curl https://sh.rustup.rs -sSf | sh -s -- -y
+      
+      - name: "Install ORAS CLI"
+        run: |
+          VERSION="1.3.0"
+          curl -LO "https://github.com/oras-project/oras/releases/download/v${VERSION}/oras_${VERSION}_linux_amd64.tar.gz"
+          mkdir -p oras-install/
+          tar -zxf oras_${VERSION}_*.tar.gz -C oras-install/
+          sudo mv oras-install/oras /usr/local/bin/
+          rm -rf oras_${VERSION}_*.tar.gz oras-install/
 
       - name: "Build Module(s)"
+        working-directory: ${{ github.workspace }}
         run: |
           owner=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
 
-          cd wasm/rust
+          source $HOME/.cargo/env
+
+          cd samples/wasm/rust
           make graphs
 
           if [ -n "${{ inputs.module-name }}" ]; then
@@ -47,12 +68,12 @@ jobs:
 
             echo "Building specific module: ${{ inputs.module-name }}"
 
-            oras push ghcr.io/$owner/${{ inputs.module-name }}:${{ inputs.graph-tag }} ./graphs/wasm-modules/${{ inputs.module-name }}-${{ parameters.graph_tag }}.wasm:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
+            oras push ghcr.io/$owner/${{ inputs.module-name }}:${{ inputs.graph-tag }} ./graphs/wasm-modules/${{ inputs.module-name }}-${{ inputs.graph-tag }}.wasm:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
           else
-            # Build and push all modules
             echo "Building all modules"
 
-            for moduleName in graphs/wasm-modules; do
-              oras push ghcr.io/$owner/$moduleName:${{ inputs.graph-tag }} ./graphs/wasm-modules/$moduleName-${{ parameters.graph_tag }}.wasm:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
+            for moduleFile in graphs/wasm-modules/*.wasm; do
+                moduleName=$(basename "$moduleFile" .wasm | sed 's/-${{ inputs.graph-tag }}$//')
+              oras push ghcr.io/$owner/$moduleName:${{ inputs.graph-tag }} ./graphs/wasm-modules/$moduleName-${{ inputs.graph-tag }}.wasm:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
             done
           fi
