--- a/.github/workflows/ghcr_graph.yml
+++ b/.github/workflows/ghcr_graph.yml
@@ -59,13 +59,13 @@ jobs:
 
           if [ -n "${{ inputs.graph-name }}" ]; then
             echo "Pushing specific graph: ${{ inputs.graph-name }}"
-            oras push ghcr.io/$owner/${{ inputs.graph-name }}:${{ inputs.graph-tag }} --config /dev/null:application/vnd.microsoft.aio.graph.v1+yaml ./${{ inputs.graph-name }}:application/yaml --disable-path-validation
+            oras push ghcr.io/$owner/explore-iot-operations/${{ inputs.graph-name }}:${{ inputs.graph-tag }} --config /dev/null:application/vnd.microsoft.aio.graph.v1+yaml ./${{ inputs.graph-name }}.yaml:application/yaml --disable-path-validation
           else
             echo "Pushing all graphs"
 
             for graphFile in *.yaml; do
               graphName=$(basename "$graphFile" .yaml)
               echo "Pushing graph: $graphName"
-              oras push ghcr.io/$owner/$graphName:${{ inputs.graph-tag }} --config /dev/null:application/vnd.microsoft.aio.graph.v1+yaml ./$graphName.yaml:application/yaml --disable-path-validation
+              oras push ghcr.io/$owner/explore-iot-operations/$graphName:${{ inputs.graph-tag }} --config /dev/null:application/vnd.microsoft.aio.graph.v1+yaml ./$graphName.yaml:application/yaml --disable-path-validation
             done
           fi
