--- a/.github/workflows/wasm-rust-build.yml
+++ b/.github/workflows/wasm-rust-build.yml
@@ -1,8 +1,5 @@
 name: Build and Push WASM Rust Builder Image
 
-permissions:
-  packages: write
-
 on:
   workflow_dispatch:
   push:
@@ -17,6 +14,9 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     defaults:
       run:
         shell: bash
