--- a/samples/wasm/rust/examples/temperature/Cargo.toml
+++ b/samples/wasm/rust/examples/temperature/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 wit-bindgen = "0.22"
-tinykube_wasm_sdk = { version = "0.2.0", registry="azure-vscode-tinykube" }
+wasm_graph_sdk = { version = "=1.1.1", registry = "aio-sdks" }
 serde = { version = "1", default-features = false, features = [
 	"derive",
 ] }
