update wasm samples to match GA release

--- a/samples/wasm/rust/examples/collection/Cargo.toml
+++ b/samples/wasm/rust/examples/collection/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "collection"
 version = "0.0.2"
-authors = ["TinyKube Devs"]
+authors = ["Wasm Graph Devs"]
 license = "MIT"
 edition = "2021"
 
