--- a/samples/wasm/rust/examples/otel-enrich/Cargo.toml
+++ b/samples/wasm/rust/examples/otel-enrich/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "otel-enrich"
 version = "0.1.0"
-authors = ["TinyKube Devs"]
+authors = ["Wasm Graph Devs"]
 license = "MIT"
 edition = "2021"
 
