--- a/samples/wasm/rust/examples/viconverter/Cargo.toml
+++ b/samples/wasm/rust/examples/viconverter/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "viconverter"
 version = "0.2.0"
-authors = ["TinyKube Devs"]
+authors = ["Wasm Graph Devs"]
 license = "MIT"
 edition = "2021"
 
