--- a/samples/wasm/rust/examples/window/Cargo.toml
+++ b/samples/wasm/rust/examples/window/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "window"
 version = "0.0.1"
-authors = ["TinyKube Devs"]
+authors = ["Wasm Graph Devs"]
 license = "MIT"
 edition = "2021"
 
