--- a/samples/wasm/rust/examples/enrichment/Cargo.toml
+++ b/samples/wasm/rust/examples/enrichment/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 wit-bindgen = "0.22"
-wasm_graph_sdk = { version = "=1.1.1", registry = "aio-sdks" }
+wasm_graph_sdk = { version = "=1.1.3", registry="aio-wg" }
 serde = { version = "1", default-features = false, features = [
 	"derive",
 ] }
@@ -17,4 +17,3 @@ serde_json = { version = "1", default-features = false, features = [
 
 [lib]
 crate-type = ["cdylib"]
-path = "src/lib.rs"
