--- a/samples/wasm/rust/examples/format/Cargo.toml
+++ b/samples/wasm/rust/examples/format/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 image = { version = "0.24" }
 wit-bindgen = "0.22"
-wasm_graph_sdk = { version = "=1.1.1", registry = "aio-sdks" }
+wasm_graph_sdk = { version = "=1.1.3", registry="aio-wg" }
 serde = { version = "1", default-features = false, features = [
 	"derive",
 ] }
@@ -19,4 +19,3 @@ serde_json = { version = "1", default-features = false, features = [
 
 [lib]
 crate-type = ["cdylib"]
-path = "src/lib.rs"
