--- a/samples/wasm/rust/examples/humidity/Cargo.toml
+++ b/samples/wasm/rust/examples/humidity/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 wit-bindgen = "0.22"
-wasm_graph_sdk = { version = "=1.1.1", registry = "aio-sdks" }
+wasm_graph_sdk = { version = "=1.1.3", registry="aio-wg" }
 serde = { version = "1", default-features = false, features = [
 	"derive",
 ] }
