--- a/samples/wasm/rust/examples/snapshot/Cargo.toml
+++ b/samples/wasm/rust/examples/snapshot/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 ndarray = "0.16.1"
-wit-bindgen = "0.32"
-wasm_graph_sdk = { version = "=1.1.1", registry = "aio-sdks" }
+wit-bindgen = "0.22"
+wasm_graph_sdk = { version = "=1.1.3", registry="aio-wg" }
 serde = { version = "1", features = [
 	"derive",
 	"rc",
@@ -19,4 +19,3 @@ serde_json = { version = "1.0", default-features = false, features = [
 
 [lib]
 crate-type = ["cdylib"]
-path = "src/lib.rs"
