fix: update module push commands in GitHub Actions and Makefile for correct file naming

--- a/.github/workflows/ghcr_module.yml
+++ b/.github/workflows/ghcr_module.yml
@@ -72,14 +72,14 @@ jobs:
             echo "Building specific module: ${{ inputs.module-name }}"
 
             cd graphs/wasm-modules
-            oras push ghcr.io/$owner/explore-iot-operations/${{ inputs.module-name }}:${{ inputs.module-tag }} ./${{ inputs.module-name }}-${{ inputs.module-tag }}.wasm:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
+            oras push ghcr.io/$owner/explore-iot-operations/${{ inputs.module-name }}:${{ inputs.module-tag }} ./${{ inputs.module-name }}.wasm:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
           else
             echo "Building all modules"
 
             cd graphs/wasm-modules
             for moduleFile in *.wasm; do
-              moduleName=$(basename "$moduleFile" .wasm | sed 's/-${{ inputs.module-tag }}$//')
+              moduleName=$(basename "$moduleFile" .wasm)
               echo "Pushing module: $moduleName"
-              oras push ghcr.io/$owner/explore-iot-operations/$moduleName:${{ inputs.module-tag }} ./$moduleName-${{ inputs.module-tag }}.wasm:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
+              oras push ghcr.io/$owner/explore-iot-operations/$moduleName:${{ inputs.module-tag }} ./$moduleFile:application/vnd.wasm.content.layer.v1+wasm --disable-path-validation
             done
           fi
