Auto-run artifact pushing if changes detected

--- a/.github/workflows/ghcr_graph.yml
+++ b/.github/workflows/ghcr_graph.yml
@@ -4,6 +4,16 @@ permissions:
   packages: write
 
 on:
+  push:
+    branches: [main]
+    paths:
+      - "samples/wasm/*.yaml"
+      - ".github/workflows/ghcr_graph.yml"
+  pull_request:
+    branches: [main]
+    paths:
+      - "samples/wasm/*.yaml"
+      - ".github/workflows/ghcr_graph.yml"
   workflow_dispatch:
     inputs:
       graph-name:
