--- a/samples/process-control/process-control-demo/src/write.dataset.client/write.dataset.client.csproj
+++ b/samples/process-control/process-control-demo/src/write.dataset.client/write.dataset.client.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\mrpc.client.generated.v3\mrpc.client.generated.v3.csproj" />
+    <ProjectReference Include="..\OpcUaMqttRpc\OpcUaMqttRpc.csproj" />
   </ItemGroup>
 
   <ItemGroup>
